--- a/Fluxus.html
+++ b/Fluxus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Fluxus.css">    
-    <title>Toshy Ware's | Fluxus</title>
+    <title>Max Ware's | Fluxus</title>
 <body>
     <div class="menu">
         <a href="https://cuty.io/THFluxus32">Fluxus 32 bits</a>
