--- a/LinkBypasser.html
+++ b/LinkBypasser.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Link Bypasser | Content For XToshy">
     <meta name="keywords" content="Bypass, Linkvertise, Pastebin, Ads">
      <link rel="stylesheet" href="LinkBypasser.css">   
-    <meta name="author" content="Toshy">
+    <meta name="author" content="Max">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
