--- a/LinkBypasser.html
+++ b/LinkBypasser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Toshy Ware's | Link Bypasser</title>
+    <title>Max Ware's | Link Bypasser</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Link Bypasser | Content For XToshy">
@@ -45,7 +45,7 @@
         <p>
              News: <br>
             <a href="News.html" target="_blank" class="footer-link">Updated Executors</a> <br>
-            Discord: <a href="https://dsc.gg/toshyscript" target="_blank" class="footer-link">Supported Links</a></a> <br>
+            Discord: <a href="discord.gg/KKZ49KDK" target="_blank" class="footer-link">Supported Links</a></a> <br>
         </p>
     </div>
     <script src="LinkBypasser.js"></script>
