--- a/LinkBypasser.html
+++ b/LinkBypasser.html
@@ -4,7 +4,7 @@
     <title>Max Ware's | Link Bypasser</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Link Bypasser | Content For XToshy">
+    <meta name="description" content="Link Bypasser | Content For XMax">
     <meta name="keywords" content="Bypass, Linkvertise, Pastebin, Ads">
      <link rel="stylesheet" href="LinkBypasser.css">   
     <meta name="author" content="Max">
@@ -20,7 +20,7 @@
 
     <!-- Caixa com o título na parte superior -->
     <div class="top-box">
-        <h3>Toshy Wares | Link Bypasser</h3>
+        <h3>Max Wares | Link Bypasser</h3>
     </div>
 
     <!-- Caixa principal com a entrada e os botões -->
