--- a/LinkBypasser.html
+++ b/LinkBypasser.html
@@ -45,7 +45,7 @@
         <p>
              News: <br>
             <a href="News.html" target="_blank" class="footer-link">Updated Executors</a> <br>
-            Discord: <a href="discord.gg/KKZ49KDK" target="_blank" class="footer-link">Supported Links</a></a> <br>
+            Discord: <a href="https://discord.gg/KKZ49KDK" target="_blank" class="footer-link">Supported Links</a></a> <br>
         </p>
     </div>
     <script src="LinkBypasser.js"></script>
